Fix APNG viewer overlay positioning (#42)
* Fix SVG overlap for APNG viewer

* Update web components library

* Add margin to APNG wrapper

--- a/src/styles/atlas.css
+++ b/src/styles/atlas.css
@@ -1,9 +1,12 @@
 .img-wrapper {
   position: relative;
+  margin-bottom: 6em;
 }
 
 .img-wrapper img {
   width: 100%;
+  max-width: 720px;
+  align-self: flex-start;
 }
 
 .img-wrapper .static-png {
@@ -11,4 +14,5 @@
   top: 0;
   left: 0;
   z-index: 1;
+  width: 95%;
 }
